article/thinkit-smallplatform/05-observability/deploy/echo/echo-basic.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-svc
  namespace: echo
  labels:
    example: http-routing
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 3000
  selector:
    app: echo-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-backend
  namespace: echo
  labels:
    app: echo-backend
    example: http-routing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-backend
  template:
    metadata:
      labels:
        app: echo-backend
    spec:
      containers:
        - name: echo-backend
          image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
          resources:
            requests:
              cpu: 10m
